# jzfs-git

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
.github/workflows/: backend.yml  flow.yml
api/: Cargo.toml
api/src/: dist.rs  lib.rs
api/src/auth/: context.rs  login.rs  mod.rs  register.rs
api/src/repo/: branch.rs  cat_file.rs  commits.rs  dash.rs  init.rs  list.rs  mod.rs  tree.rs
git/: Cargo.toml
git/src/: cat_file.rs  lib.rs
git/src/blob/: bytes.rs  insert.rs  mod.rs
git/src/branch/: list.rs
git/src/commit/: list.rs  tree.rs
git/src/tree/: mod.rs  msg_tree.rs  state_tree.rs
infra/: Cargo.toml
infra/src/: error.rs  lib.rs
infra/src/config/: pgsql.rs  redis.rs
infra/src/entities/: git_branch.rs  git_commit.rs  git_tags.rs  init.sql  mod.rs  repository.rs  users.rs
infra/src/service/: auth.rs  branch.rs  cat_file.rs  mod.rs  repository.rs  sync_hook.rs
infra/src/types/: mod.rs  pager.rs  session.rs
rsession/src/framework/: actix.rs
rsession/src/inner/: inner.rs
rsession/src/storage/: redis.rs
script/: nginx.conf  start.sh
shell/: Cargo.toml
shell/src/: lib.rs
shell/src/http/: git_pack.rs  git_receive_pack.rs  git_refs.rs  git_upload_pack.rs  mod.rs
shell/src/ssh/: handle.rs  mod.rs  server.rs
views/: package.json  pnpm-lock.yaml  vite.config.ts
views/src/: main.tsx  routes.tsx
views/src/app/: layout.tsx
views/src/app/auth/: layout.tsx  login.tsx  register.tsx
views/src/app/init/: page.tsx
views/src/app/repository/: branch.tsx  commit.tsx  files.tsx  layout.tsx
views/src/app/root/: RepoList.tsx  UsersList.tsx
views/src/component/shell/: Header.tsx
views/src/store/: useUserContext.tsx
views/src/style/: auth.css  root.css
