[package]
name = "jzfs"
edition.workspace = true
version.workspace = true

[[bin]]
name = "jzfs"
path = "bin/jzfs.rs"

[dependencies]
api = { workspace = true }
infra = { workspace = true }
git = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rsession = { workspace = true, features = ["actix-web","redis"] }
time = { workspace = true, features = ["local-offset"]}
shell = { workspace = true }

[workspace.package]
version = "0.1.1"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
figment = "0.10"
rust-embed = "8"
serde = "1"
thiserror = "2"
time = "0.3"
tokio = "1"
tracing = "0.1"
ulid = "1"
dotenvy = "0.15"
tracing-appender ="0.2"
serde_json = "1.0.141"
tracing-subscriber = "0.3.19"
askama = "0.14.0"
rand = "0.9"
uuid = "1.17.0"
axum = "0.8.4"
git = { path = "git" }
infra = { path = "infra" }
api = { path = "api" }
rsession = { path = "rsession" }
shell = { path = "shell" }
[workspace]
members = [
    "infra",
    "git",
    "api",
    "rsession",
    "shell"
]
resolver = "3"