[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
askama = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }
infra = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rsession = { workspace = true ,features = ["redis","actix-web"]}
actix-web = { version = "4.11.0", features = ["macros"]}
shell = { workspace = true }