[package]
name = "git"
version.workspace = true
edition = "2024"


[dependencies]
git2 = { version = "0.20.2", features = [] }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
dotenv = "0.15.0"
serde_json = "1.0.140"