[package]
name = "infra"
version = "0.1.0"
edition = "2024"


[dependencies]
uuid = { workspace = true, features = ["v7","v4","serde"] }
chrono = { version = "0.4.41", features = ["serde","clock"] }
sqlx = { version = "0.8.6", features = ["uuid","json","sqlx-postgres","runtime-tokio","derive","macros","chrono","postgres"]}
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true, features = ["backtrace"] }
rsession = { workspace = true, features = ["redis","redis-cluster"] }
async-trait = "0.1.88"
serde_json = "1.0.141"
sha256 = { version = "*" }
git = { workspace = true }
dotenv = "0.15.0"
deadpool-redis = { version = "0.22.0", features = ["cluster","cluster-async","rt_tokio_1","acl","connection-manager"] }
tokio = { workspace = true, features = ["full"] }